gui_files = files(
	'Style.cpp',
)

subdir('colourpicker')
subdir('console')
subdir('credits')
subdir('dialogues')
subdir('elementsearch')
subdir('filebrowser')
subdir('font')
subdir('game')
subdir('interface')
subdir('localbrowser')
if enable_http
	subdir('login')
endif
subdir('options')
subdir('preview')
if enable_http
	subdir('profile')
endif
subdir('render')
subdir('save')
if enable_http
	subdir('search')
	subdir('tags')
	subdir('update')
endif
